styled and improved

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,21 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-V7jpr5BzKtq/0ff2bEBIn8DaC9iFE9CK0Oj2GfNSP03Uc2eB4Qgy08n+4J/eXZnWp8L4MgzZN9ZXsyU8hRk9mQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@600&display=swap"
+      rel="stylesheet"
+    />
 
-    <title>React App</title>
+    <title>D4 COUNTDOWN</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
